--- a/assignment7/about7.html
+++ b/assignment7/about7.html
@@ -21,7 +21,7 @@
   <main>
     <h2>Multistage Aerobic</h2>
 
-    <div id=imageR><img src="tables.jpg" alt="Tables" /></div>
+    <div id=imageR><img src="Tables.jpg" alt="Tables" /></div>
 
     <p><a href="assignment7.html">The FitpacenessGrammer™ Test</a> is a multistage aerobic capacity test that progressively gets more difficult as it continues. The 20 meter pacer test will begin in 30 seconds. Line up at the start. The running speed starts slowly, but gets faster each minute after you hear this signal. [beep] A single lap should be completed each time you hear this sound. [ding] Remember to run in a straight line, and run as long as possible. The second time you fail to complete a lap before the sound, your test is over. The test will begin on the word start. On your mark, get ready, start.</p>
 
