--- a/PortfolioSite/gallary.html
+++ b/PortfolioSite/gallary.html
@@ -25,7 +25,7 @@
     <div id=imageGrid>
       <img src="zJokerPot.png" alt="Joker Pot" />
       <img src="zAnimals.png" alt="Animal Avatars" />
-      <img src="zPlaycards.png" alt="Playing Cards" />
+      <img src="zPlayCards.png" alt="Playing Cards" />
       <img src="zVar1.png" alt="Varients 1" />
       <img src="zPyramids.png" alt="Pyramids" />
       <img src="zVar2.png" alt="Varients" />
