--- a/PortfolioSite/Projects.html
+++ b/PortfolioSite/Projects.html
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="about.html">About Me</a></li>
             <li><a href="Projects.html">Projects</a></li>
-            <li><a href="gallary.html">Gallary</a></li>
+            <li><a href="gallary.html">Gallery</a></li>
           </ul>
         </nav>
     </header>
