--- a/PortfolioSite/gallary.html
+++ b/PortfolioSite/gallary.html
@@ -15,12 +15,12 @@
           <ul>
             <li><a href="about.html">About Me</a></li>
             <li><a href="Projects.html">Projects</a></li>
-            <li><a href="gallary.html">Gallary</a></li>
+            <li><a href="gallary.html">Gallery</a></li>
           </ul>
         </nav>
     </header>
   <main>
-    <h2>A Gallary of Some of My Random Stuff</h2>
+    <h2>A Gallery of Some of My Random Stuff</h2>
 
     <div id=imageGrid>
       <img src="zJokerPot.png" alt="Joker Pot" />
