--- a/PortfolioSite/home.html
+++ b/PortfolioSite/home.html
@@ -16,7 +16,7 @@
         <ul>
       <li><a href="about.html">About Me</a></li>
       <li><a href="Projects.html">Projects</a></li>
-      <li><a href="gallary.html">Gallary</a></li>
+      <li><a href="gallary.html">Gallery</a></li>
     </ul>
       </nav>
   </header>
@@ -27,7 +27,7 @@
     <div id=imageHome>
       <a href="about.html"><img src="me.png" alt="Brendan Shaffer Himself" /><p>Learn About Me</p></a>
       <a href="Projects.html"><img src="ProjectsT.png" alt="Projects" /><p>Some Projects of mine</p></a>
-      <a href="gallary.html"><img src="zGallary.png" alt="Gallary" /><p>A Gallary of Random Stuff</p></a>
+      <a href="gallary.html"><img src="zGallary.png" alt="Gallery" /><p>A Gallery of Random Stuff</p></a>
     </div>
   </main>
   <footer>
