--- a/PortfolioSite/about.html
+++ b/PortfolioSite/about.html
@@ -29,12 +29,12 @@
     <p>
       <ul>
         <li><i class="bi bi-arrow-left"></i><i class="bi bi-arrow-left"></i><i class="bi bi-arrow-left"></i> That's Me Over There</li>
-        <li>I Graduated from Crystal Lake South Highschool</li>
-        <li>I'm Currently a Game Design Major at Illinois State</li>
-        <li>I'm a Bit of a Comics Nerd</li>
+        <li>Graduated from Crystal Lake South Highschool in 2018</li>
+        <li>Senior Game Design Major at Illinois State</li>
+        <li>Bit of a Comics Nerd</li>
         <li>I'm Also Just a Nerd in General</li>
         <li>I Like what I Do and I Do What I Like</li>
-        <li><i class="bi bi-envelope"></i> shaffer232323@gmail.com <i class="bi bi-envelope"></i></li>
+        <li><i class="bi bi-envelope"></i> shaffer2323@hotmail.com <i class="bi bi-envelope"></i></li>
       </ul>
     </p>
 
