--- a/PortfolioSite/Projects.html
+++ b/PortfolioSite/Projects.html
@@ -27,7 +27,8 @@
     <p>
       <ul>
         <li><h2>"Idle Head Trauma"</h2><div id=imageL><img src="idle.png" alt="Idle Head Trauma" /></div>I never got the point "idle games." What's so fun about a game that plays itself, right? But then I was assigned to create UI assets for a mobile idle game. The more I researched about this genre, the more I wanted to whack my face in with a baseball bat. And that's when it hit me (no pun intended). I should make assets for an idle game where you just repeatedly hit yourself in the face with various items!</li>
-        <li><h2>"Intuitive Investigation"</h2><div id=imageR><img src="intinv.png" alt="Intuitive Investigation" /></div>In one of my Game design classes, I worked on a game I called "Intuitive Investigation" where you solve a murder using nothing but intuition to figure out the weapon, time, location, motive, and finally the actual murderer. I never really understood how it worked but I made these slick looking cards to go with it, as well as that logo!</li>
+        <li><h2>"Feed the Frog"</h2><div id=imageR><img src="intinv.png" alt="Intuitive Investigation" /></div>This is a little game I made in JavaScript. Play the game at https://shaffer2323.github.io/CTK302/Unit3/mp3/ OR scan the QR code with your phone to play a version where you control the frog by tilting your phone!</li>
+          <li><h2>"Intuitive Investigation"</h2><div id=imageL><img src="intinv.png" alt="Intuitive Investigation" /></div>In one of my Game design classes, I worked on a game I called "Intuitive Investigation" where you solve a murder using nothing but intuition to figure out the weapon, time, location, motive, and finally the actual murderer. I never really understood how it worked but I made these slick looking cards to go with it, as well as that logo!</li>
       </ul>
     </p>
   </main>
